# pkg/handler/buyer.go
@@ -12,13 +12,13 @@ import (
 // @Tags Buyers
 // @Accept json
 // @Produce json
-// @Param input body model.Buyer true "Buyer data"
+// @Param input body model.BuyerInput true "Buyer data"
 // @Success 201 {string} string "Buyer signed up successfully"
 // @Failure 400 {object} ErrorResponse "Invalid input data"
 // @Failure 500 {object} ErrorResponse "Failed to sign up"
 // @Router /sign-up/buyer [post]
 func (h *Handler) BuyerSignUp(c *gin.Context) {
-	var input model.Buyer
+	var input model.BuyerInput
 
 	// Ошибка при валидации данных
 	if err := c.ShouldBindJSON(&input); err != nil {
@@ -70,7 +70,7 @@ func (h *Handler) GetBuyer(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param Authorization header string true "Bearer {JWT}"
-// @Param input body model.Buyer true "Buyer data"
+// @Param input body model.BuyerInput true "Buyer data"
 // @Success 200 {string} string "Buyer updated successfully"
 // @Failure 400 {object} ErrorResponse "Invalid input data"
 // @Failure 403 {object} ErrorResponse "You are not authorized to access this resource"
@@ -85,7 +85,7 @@ func (h *Handler) UpdateBuyer(c *gin.Context) {
 		return
 	}
 
-	var input model.Buyer
+	var input model.BuyerInput
 	// Ошибка при валидации входных данных
 	if err := c.ShouldBindJSON(&input); err != nil {
 		newErrorResponse(c, http.StatusBadRequest, "Invalid input data: "+err.Error()) // 400 Bad Request
