# pkg/model/order.go
@@ -8,3 +8,17 @@ type Order struct {
 	Total      float64     `json:"total" gorm:"not null"`
 	Status     string      `json:"status" gorm:"not null"`
 }
+
+type OrderOutput struct {
+	BuyerID string          `json:"buyer_id"`
+	Total   float64         `json:"total" gorm:"not null"`
+	Status  string          `json:"status" gorm:"not null"`
+	Items   []OrderItemInfo `json:"items"`
+}
+
+type OrderItemInfo struct {
+	ID       int     `json:"id"`
+	Name     string  `json:"name"`
+	Price    float64 `json:"price"`
+	Quantity int     `json:"quantity"`
+}
